--- a/FamilyPocket-API.xcodeproj/xcshareddata/xcschemes/FamilyPocket-API-Package.xcscheme
+++ b/FamilyPocket-API.xcodeproj/xcshareddata/xcschemes/FamilyPocket-API-Package.xcscheme
@@ -56,6 +56,48 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "PostgreSQLProvider::PostgreSQLProvider"
+               BuildableName = "PostgreSQLProvider.framework"
+               BlueprintName = "PostgreSQLProvider"
+               ReferencedContainer = "container:FamilyPocket-API.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "PostgreSQLDriver::PostgreSQLDriver"
+               BuildableName = "PostgreSQLDriver.framework"
+               BlueprintName = "PostgreSQLDriver"
+               ReferencedContainer = "container:FamilyPocket-API.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "PostgreSQL::PostgreSQL"
+               BuildableName = "PostgreSQL.framework"
+               BlueprintName = "PostgreSQL"
+               ReferencedContainer = "container:FamilyPocket-API.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "FluentProvider::FluentProvider"
                BuildableName = "FluentProvider.framework"
                BlueprintName = "FluentProvider"
