--- a/FamilyPocket-API.xcodeproj/xcshareddata/xcschemes/FamilyPocket-API-Package.xcscheme
+++ b/FamilyPocket-API.xcodeproj/xcshareddata/xcschemes/FamilyPocket-API-Package.xcscheme
@@ -42,6 +42,34 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Paginator::Paginator"
+               BuildableName = "Paginator.framework"
+               BlueprintName = "Paginator"
+               ReferencedContainer = "container:FamilyPocket-API.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Fluent::FluentTester"
+               BuildableName = "FluentTester.framework"
+               BlueprintName = "FluentTester"
+               ReferencedContainer = "container:FamilyPocket-API.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "LeafProvider::LeafProvider"
                BuildableName = "LeafProvider.framework"
                BlueprintName = "LeafProvider"
